fixing release node

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=8.2",
-        "nikic/fast-route": "^2.0@dev",
+        "nikic/fast-route": ">=2.0@dev",
         "xel/psr7bridge": "dev-main"
     },
     "require-dev": {
