--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "require": {
         "php": ">=8.2",
         "nikic/fast-route": ">=2.0@dev",
-        "xel/psr7bridge": "dev-main"
+        "xel/psr7bridge": ">=0.1.2"
     },
     "require-dev": {
         "phpstan/phpstan": "2.0.x-dev"
