--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=8.2",
-        "nikic/fast-route": ">=2.0@dev",
-        "xel/psr7bridge": ">=0.1.2"
+        "xel/psr7bridge": ">=0.1.2",
+        "nikic/fast-route": "^2.0@dev"
     },
     "require-dev": {
         "phpstan/phpstan": "2.0.x-dev"
