--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "require": {
         "php": ">=8.2",
         "xel/psr7bridge": ">=0.1.2",
-        "nikic/fast-route": "^2.0-dev"
+        "nikic/fast-route": "2.0.x-dev@dev"
     },
     "require-dev": {
         "phpstan/phpstan": "2.0.x-dev"
