--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,11 @@
 
     "require": {
         "php": ">=8.2",
-        "xel/psr7bridge": ">=0.1.2",
-        "nikic/fast-route": "2.0.x-dev@dev",
-        "xel/container": "dev-main"
+        "nikic/fast-route": "v1.3.0",
+        "xel/container": "dev-main",
+        "nyholm/psr7": "^1.8",
+        "xel/psr7bridge": "^0.1.4",
+        "psr/http-server-middleware": "^1.0"
     },
     "require-dev": {
         "phpstan/phpstan": "2.0.x-dev"
