--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "xel/container": "dev-main",
         "nyholm/psr7": "^1.8",
         "xel/psr7bridge": "^0.1.4",
-        "psr/http-server-middleware": "^1.0"
+        "psr/http-server-middleware": "^1.0",
+        "xel/orm": "^1.0"
     },
     "scripts": {
         "analyse": "phpstan analyse"
