--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "nyholm/psr7": "^1.8",
         "xel/psr7bridge": "^0.1.4",
         "psr/http-server-middleware": "^1.0",
-        "xel/orm": "^1.0"
+        "xel/orm": "^1.0",
+      "ext-pdo": "*"
     },
     "scripts": {
         "analyse": "phpstan analyse"
