--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "nikic/fast-route": "v1.3.0",
         "xel/container": "dev-main",
         "nyholm/psr7": "^1.8",
-        "xel/psr7bridge": "^0.1.4",
+        "xel/psr7bridge": "0.1.4",
         "psr/http-server-middleware": "^1.0",
         "xel/orm": "^1.0",
       "ext-pdo": "*"
