--- a/composer.json
+++ b/composer.json
@@ -27,11 +27,11 @@
         "nyholm/psr7": "^1.8",
         "xel/psr7bridge": "0.1.4",
         "psr/http-server-middleware": "^1.0",
-          "ext-pdo": "*",
-        "xel/orm": "dev-main",
-      "ext-openssl": "*",
+        "ext-pdo": "*",
+        "ext-openssl": "*",
         "swoole/ide-helper": "@dev",
-        "xel/logger": "dev-main"
+        "xel/logger": "dev-main",
+        "xel/orm": "dev-main"
     },
     "scripts": {
         "analyse": "phpstan analyse"
